--- a/docker/db/Dockerfile
+++ b/docker/db/Dockerfile
@@ -1,7 +1,7 @@
-FROM postgres
+FROM postgres:17-alpine
 
-ENV POSTGRES_PASSWORD docker
 ENV POSTGRES_DB db
+ENV POSTGRES_PASSWORD docker
 ENV POSTGRES_USER docker
 
 COPY . /app/database
