--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# artifacts
+/.turbo
+/**/*/.turbo
+/**/*/*.js
+/**/*/*.map
+/**/*/*.d.ts
+/**/*/*.tsbuildinfo
+
+# dependencies
+/node_modules
+/**/*/node_modules
+
 # editors
 /.idea
